[package]
name = "Rex"
version = "2.1.0"
edition = "2024"

[dependencies]
recursive_copy = "1.1"
tar_minimal = "1.0"
zstd = { version = "0.13", default-features = false }
rldd-rex = "1.0"

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true
strip = true
debug = false
overflow-checks = false
split-debuginfo = "off"
